--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ header {
   color: white;
   background-color: rgba(6, 59, 103, 0.3);
   font-size: 3em;
-  font-family: font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif;
   -webkit-transition: all .3s;
   transition: all .3s;
   position: absolute;
@@ -320,7 +320,7 @@ header {
 
 .card-block {
   display: flex;
-  align-content: left;
+  align-content: flex-start;
   padding: 2em;
 }
 
