--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 
 nav {
   background-image: linear-gradient solid (to right, white , rgba(255, 192, 203, 0.733));
+  background-color: white;
   font-family: 'Roboto', sans-serif;
   padding: 20px;
   position: fixed;
