--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 nav {
-  background-color: white;
+  //background-color: white;
   background-image: linear-gradient solid (to right, white , rgba(255, 192, 203, 0.733));
   font-family: 'Roboto', sans-serif;
   padding: 20px;
