--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ body {
 }
 
 nav {
-  background: linear-gradient (to right, white , rgba(255, 192, 203, 0.733));
+  background: rgba(255, 192, 203, 0.733);
+  background: linear-gradient (145deg, white , rgba(255, 192, 203, 0.733));
   font-family: 'Roboto', sans-serif;
   padding: 20px;
   position: fixed;
